# Argent-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  db.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  xui_api.py
charset_normalizer-3.4.4.dist-info/: RECORD
outline_vpn_api-6.4.1.dist-info/: RECORD
site/: index.html
src/: config.py  loader_bot.py  main.py
src/api/: pay_api.py
src/auth/: dependencies.py  security.py  verify_system_token.py
src/clients/: core_client.py  pay_client.py  user_client.py
src/database/: models.py
src/database/dao/: user_dao.py  vpn_dao.py
src/handlers/: adm_handler.py  base_handler.py  init_handler.py  key_handler.py  pay_handler.py  user_handlers.py
src/keyboards/: user_keyboards.py
src/migration/versions/: 01b0f490280a_initial_migration.py
src/schemas/: bot_schema.py  jwt_schema.py  pay_schemas.py  vpn_client_schema.py
src/states/: adm_states.py
src/utils/: distributor.py  semaphore_sending_notif.py  texts.py
