[project]
name = "Argent-bot"
version = "1.1.0"
description = "Telegram bot of Argent service"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.27.0",
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
    "pydantic>=2.12.5",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "python-jose[cryptography]>=3.5.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",          
    "pytest-asyncio>=0.21.0", 
    "ruff>=0.1.0",       
]

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "UP"]
fixable = ["ALL"]
allowed-confusables = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "Depends"]

[tool.ruff.lint.isort]
known-first-party = ["src"]